--- a/main.ipynb
+++ b/main.ipynb
@@ -4,8 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Hi! This is my work, where I mapped the 2020 congressional election votes to their districts. I then normalized it so we can see the value as -1 (100% republican) and 1 (100% democrat).\n",
-    "100% is not equivalent to 100% of votes for the district, just the max value in a list of votes tallied"
+    "Hi! I normalized the vote tallies for the last couple of congressional elections and normalized the values so we could see how evenly matched the 2 parties were in each district.
    ]
   },
   {
