--- a/main.ipynb
+++ b/main.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Hi! I normalized the vote tallies for the last couple of congressional elections and normalized the values so we could see how evenly matched the 2 parties were in each district.
+    "Hi! I normalized the vote tallies for the last couple of congressional elections and normalized the values so we could see how evenly matched the 2 parties were in each district."
    ]
   },
   {
